<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountTitle"
        android:text="@string/create_account_header"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_below="@id/createAccountTitle"
        android:background="#30ffffff"
        android:hint="@string/username_prompt_createacc"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_below="@id/editTextName"
        android:background="#30ffffff"
        android:hint="@string/email_prompt_createacc"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:layout_below="@id/editTextEmail"
        android:background="#30ffffff"
        android:hint="@string/password_prompt_createacc"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

</RelativeLayout>
